# konkani-amr

./: .gitignore  TODO.md  pyproject.toml
annotations/: amr_outputs.json  cost.py  gemini.py  gemini_token_log.jsonl
annotations/gemini/: amr_outputs.json  amr_outputs_100.json  amr_outputs_10_temp.json  gemini.py  gemini_token_log.jsonl
annotations/gemini/helper/: load_train_json.py  merge_train.py
annotations/gemini/output_train/: amr_outputs_bpcc_latest_sample.json  amr_outputs_wiki_sample.json
annotations/gemini/temp/: amr_outputs.json
annotations/translation/: indictrans2.py  setup.md
annotations/viz/: index.html  main.py
experiments/amrbart/baseline/: basic-infernece.ipynb  temp.py
experiments/baseline/: calculate_baseline_smatch.py  mbart-amr30-inference.ipynb  run_baseline_smatch.sh
experiments/baseline/logs/: AMR_Baseline_Smatch_3730945.err  AMR_Baseline_Smatch_3730945.out
experiments/baseline/results/: metrics.json
experiments/mbart-large-cc25-ft-amr30-en/baseline/: calculate_baseline_smatch.py  data.csv  mbart-amr30-inference.ipynb  run_baseline_smatch.sh  score_from_tsv.py
experiments/mbart-large-cc25-ft-amr30-en/baseline_2/: baseline.ipynb  basic-inference.ipynb
experiments/mbart-large-cc25-ft-amr30-en/finetune/: README.md  finetune.ipynb  finetune_konkani_amr.ipynb  finetune_konkani_amr.py  run_finetune.sh
experiments/mbart-large-cc25-ft-amr30-en/pretrain/: step1_pretrain_mlm.ipynb  step2_finetune_amr.ipynb
training_data/: bpcc_latest_sample.csv  create_pretraining.py  sample.py  wiki_sample.csv
utils/: sample.sh
(+19 files in other folders)
