[project]
name = "konkani-amr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.2",
    "fastapi>=0.133.1",
    "google-genai",
    "hf>=1.7.1",
    "python-dotenv",
    "ruff",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
]
