[project]
name = "konkani-amr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amrlib>=0.8.1",
    "datasets>=4.8.2",
    "fastapi>=0.133.1",
    "google-genai",
    "hf>=1.7.1",
    "pandas>=2.3.3",
    "penman>=1.3.1",
    "python-dotenv",
    "ruff",
    "smatch>=1.0.4",
    "smatchpp>=1.8.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
]
